Fri, 31 Aug 2007 20:03:03 +0200 <thp@perli.net>
Use Python's webbrowser module for URL opening; channel dialog clean-up

	* bin/gpodder: Set version to 0.9.5+svn (this is where we are now)
	* data/gpodder.glade: Remove "cancel" button from gPodderChannel
	* src/gpodder/gui.py: Use "webbrowser" module for URL opening instead
	of relying on "gnome-open" to be available; remove event handler for
	gPodderChannel's "cancel" button

Thu, 30 Aug 2007 21:06:28 +0200 <thp@perli.net>
Dependency check for python-feedparser in bin/gpodder

	* bin/gpodder: Add dependency check and warning (with exit) if
	python-feedparser is not installed, as python-feedparser now is a
	dependency of gPodder

Thu, 30 Aug 2007 20:51:46 +0200 <thp@perli.net>
Support for modifying DownloadHistory and PlaybackHistory in GUI

	* data/gpodder.glade: Added menu items in gPodder main window
	* src/gpodder/gui.py: Add menu items to treeAvailable's context menu
	to toggle/set downloaded and played status on selected episodes
	* src/gpodder/libgpodder.py: Add del_item() function to
	DownloadHistory to support removing items from the history list;
	enhance history_mark_{played,downloaded}() functions for add/delete

Thu, 30 Aug 2007 20:46:48 +0200 <thp@perli.net>
Improved pubDate parsing; episode delete bugfix

	* src/gpodder/libpodcasts.py: Let feedparser parse the pubDate field
	of episodes and use new function in gpodder.util to convert the parsed
	pubDate to a string; bugfix for remove downloaded episode by URL
	* src/gpodder/util.py: Add updated_parsed_to_rfc2822() function that
	converts the "updated_parsed" field from feedparser to a RFC2822
	string

Thu, 30 Aug 2007 12:03:24 +0200 <thp@perli.net>
Remove obsolete documentation in doc/dev; cosmetic changes

	* data/po/Makefile: Upgrade to GPLv3
	* data/po/README: Mention i18n page on gPodder's website
	* doc/dev/build-deps-breezy.txt: Removed
	* doc/dev/debian.txt: Removed
	* doc/dev/i18n.txt: Removed
	* doc/dev/porting.txt: Removed